# artificial-intelligence

Praktikum1-2/nlp/: testing.py  training.py
Praktikum1-2/nlp/iteung/: reply.py
Praktikum3/belajar-rust/: Cargo.toml  readme.md
Praktikum3/belajar-rust/src/rust2/: rust2.rs
Praktikum3/belajar-rust/src/rust2/borrowing/: borrowing.rs
Praktikum3/belajar-rust/src/rust2/clone/: clone.rs
Praktikum3/belajar-rust/src/rust2/copy/: copy.rs
Praktikum3/belajar-rust/src/rust2/dangling/: dangling.rs
Praktikum3/belajar-rust/src/rust2/mutable/: mutable.rs
Praktikum3/belajar-rust/src/rust2/ownership/: ownership.rs
Praktikum3/belajar-rust/src/rust2/reference/: reference.rs
Praktikum3/belajar-rust/src/rust2/scope/: scope.rs
Praktikum3/belajar-rust/src/rust2/slice/: slice.rs
Praktikum3/belajar-rust/src/rust3/: main.rs
Praktikum3/belajar-rust/src/rust3/function/: mod.rs
Praktikum3/belajar-rust/src/rust3/structs/: mod.rs
Praktikum3/hugging face/phi/: Cargo.toml
Praktikum3/hugging face/rwkv/: Cargo.toml
Praktikum3/inarust/: .env  Cargo.toml
Praktikum3/inarust/src/configs/: config.rs
Praktikum3/learn-rust/: Cargo.toml
Praktikum3/learn-rust/src/appendix1/: a1.rs
Praktikum3/learn-rust/src/appendix2/: a2.rs
Praktikum3/learn-rust/src/hours2/: h2.rs
Praktikum3/learn-rust/src/hours3/: h3.rs
Praktikum3/learn-rust/src/hours4/: h4.rs
Praktikum3/learn-rust/src/hours5/: h5.rs
Praktikum3/learn-rust/src/hours6/: ex_file.rs  h6.rs  prime.rs
Praktikum3/learn-rust/src/hours7/: h7.rs
Praktikum3/learn-rust/src/hours8/: h8.rs
